modules/network/subnets.tf
# File generated by aws2tf see https://github.com/aws-samples/aws2tf

# aws_subnet.subnet-i1:
resource "aws_subnet" "subnet-i1" {
  depends_on=[aws_vpc_ipv4_cidr_block_association.vpc-cidr-assoc]
  assign_ipv6_address_on_creation = false
  availability_zone               = data.aws_availability_zones.az.names[0]
  cidr_block                      = "100.64.0.0/18"
  map_public_ip_on_launch         = false
  tags = {
    "Name"                                        = format("i1-%s",var.cluster-name)
    "kubernetes.io/cluster/${var.cluster-name}"            = "shared"
    "workshop" = "subnet-i1"
  }
  vpc_id = aws_vpc.cluster.id

  timeouts {}
}
# File generated by aws2tf see https://github.com/aws-samples/aws2tf
# aws_subnet.subnet-i2:
resource "aws_subnet" "subnet-i2" {
  depends_on=[aws_vpc_ipv4_cidr_block_association.vpc-cidr-assoc]
  assign_ipv6_address_on_creation = false
  availability_zone               = data.aws_availability_zones.az.names[1]
  cidr_block                      = "100.64.64.0/18"
  map_public_ip_on_launch         = false
  tags = {
    "Name" = format("i2-%s",var.cluster-name)
    "kubernetes.io/cluster/${var.cluster-name}" = "shared"
    "workshop" = "subnet-i2"
  }
  vpc_id = aws_vpc.cluster.id

  timeouts {}
}
# File generated by aws2tf see https://github.com/aws-samples/aws2tf
# aws_subnet.subnet-i3:
resource "aws_subnet" "subnet-i3" {
  depends_on=[aws_vpc_ipv4_cidr_block_association.vpc-cidr-assoc]
  assign_ipv6_address_on_creation = false
  availability_zone               = data.aws_availability_zones.az.names[2]
  cidr_block                      = "100.64.128.0/18"
  map_public_ip_on_launch         = false
  tags = {
    "Name"                                        = format("i3-%s",var.cluster-name)
    "kubernetes.io/cluster/${var.cluster-name}"            = "shared"
    "workshop" = "subnet-i3"
  }
  vpc_id = aws_vpc.cluster.id

  timeouts {}
}
# File generated by aws2tf see https://github.com/aws-samples/aws2tf
# aws_subnet.subnet-p1:
resource "aws_subnet" "subnet-p1" {
  assign_ipv6_address_on_creation = false
  availability_zone               = data.aws_availability_zones.az.names[0]
  cidr_block                      = "10.0.1.0/24"
  map_public_ip_on_launch         = false
  tags = {
    "Name"                                        = "Private1"
    "kubernetes.io/cluster/${var.cluster-name}"            = "shared"
    "kubernetes.io/role/internal-elb"             = "1"
    "workshop" = "subnet-p1"
  }
  vpc_id = aws_vpc.cluster.id

  timeouts {}
}



# File generated by aws2tf see https://github.com/aws-samples/aws2tf
# aws_subnet.subnet-p2:
resource "aws_subnet" "subnet-p2" {
  assign_ipv6_address_on_creation = false
  availability_zone               = data.aws_availability_zones.az.names[1]
  cidr_block                      = "10.0.2.0/24"
  map_public_ip_on_launch         = false
  tags = {
    "Name"                                        = "Private2"
    "kubernetes.io/cluster/${var.cluster-name}"            = "shared"
    "kubernetes.io/role/internal-elb"             = "1"
    "workshop" = "subnet-p2"
  }
  vpc_id = aws_vpc.cluster.id

  timeouts {}
}

# File generated by aws2tf see https://github.com/aws-samples/aws2tf
# aws_subnet.subnet-p3:
resource "aws_subnet" "subnet-p3" {
  assign_ipv6_address_on_creation = false
  availability_zone               = data.aws_availability_zones.az.names[2]
  cidr_block                      = "10.0.3.0/24"
  map_public_ip_on_launch         = false
  tags = {
    "Name"                                        = "Private3"
    "kubernetes.io/cluster/${var.cluster-name}"            = "shared"
    "kubernetes.io/role/internal-elb"             = "1"
    "workshop" = "subnet-p3"
  }
  vpc_id = aws_vpc.cluster.id

  timeouts {}
}

# File generated by aws2tf see https://github.com/aws-samples/aws2tf
# aws_subnet.subnet-00cc72ac5b0b79dd4:
resource "aws_subnet" "subnet-00cc72ac5b0b79dd4" {
  assign_ipv6_address_on_creation = false
  availability_zone               = data.aws_availability_zones.az.names[0]
  cidr_block                      = "172.30.0.128/26"
  map_public_ip_on_launch         = false
  tags = {
    "Name"     = "cicd-private1"
    "workshop" = "cicd-private1"
  }
  vpc_id = aws_vpc.vpc-cicd.id

  timeouts {}
}

# File generated by aws2tf see https://github.com/aws-samples/aws2tf
resource "aws_subnet" "subnet-cicd-public1" {
  assign_ipv6_address_on_creation = false
  availability_zone               = data.aws_availability_zones.az.names[0]
  cidr_block                      = "172.30.0.0/26"
  map_public_ip_on_launch         = false
  tags = {
    "Name"     = "cicd-public1"
    "workshop" = "cicd-public1"
  }
  vpc_id = aws_vpc.vpc-cicd.id

  timeouts {}
}
