modules/network/route_tables.tf
# File generated by aws2tf see https://github.com/aws-samples/aws2tf
# aws_route_table_association.rtbassoc-049d94408cba62cca:
resource "aws_route_table_association" "rtbassoc-049d94408cba62cca" {
  route_table_id = aws_route_table.rtb-0329e787bbafcb2c4.id
  subnet_id      = aws_subnet.subnet-i2.id
}
# File generated by aws2tf see https://github.com/aws-samples/aws2tf
# aws_route_table_association.rtbassoc-029eb518ff8c1739a:
resource "aws_route_table_association" "rtbassoc-029eb518ff8c1739a" {
  route_table_id = aws_route_table.rtb-041267f0474c24068.id
  subnet_id      = aws_subnet.subnet-p1.id
}


# File generated by aws2tf see https://github.com/aws-samples/aws2tf
# aws_route_table_association.rtbassoc-08fc27d0456901ef8:
resource "aws_route_table_association" "rtbassoc-08fc27d0456901ef8" {
  route_table_id = aws_route_table.rtb-0329e787bbafcb2c4.id
  subnet_id      = aws_subnet.subnet-i3.id
}

# File generated by aws2tf see https://github.com/aws-samples/aws2tf
# aws_route_table_association.rtbassoc-0eb5ebf6fd5e14e09:
resource "aws_route_table_association" "rtbassoc-0eb5ebf6fd5e14e09" {
  route_table_id = aws_route_table.rtb-0329e787bbafcb2c4.id
  subnet_id      = aws_subnet.subnet-p3.id
}

resource "aws_route_table_association" "rtbassoc-0c3e14aeb276186c2" {
  route_table_id = aws_route_table.rtb-0102c621469c344cd.id
  subnet_id      = aws_subnet.subnet-p2.id
}

resource "aws_route_table_association" "rtbassoc-0b44c68881df61a18" {
  route_table_id = aws_route_table.rtb-0329e787bbafcb2c4.id
  subnet_id      = aws_subnet.subnet-i1.id
}

# File generated by aws2tf see https://github.com/aws-samples/aws2tf
# aws_route_table_association.rtbassoc-024cb38ce64e85194:
resource "aws_route_table_association" "rtbassoc-024cb38ce64e85194" {
  route_table_id = aws_route_table.rtb-0c9df3106b9e1bca9.id
  subnet_id      = aws_subnet.subnet-cicd-public1.id
}

# File generated by aws2tf see https://github.com/aws-samples/aws2tf
# aws_route_table_association.rtbassoc-04310374909657ddd:
resource "aws_route_table_association" "rtbassoc-04310374909657ddd" {
  route_table_id = aws_route_table.rtb-0fe5311ff86579482.id
  subnet_id      = aws_subnet.subnet-00cc72ac5b0b79dd4.id
}

# File generated by aws2tf see https://github.com/aws-samples/aws2tf
# aws_route_table.rtb-041267f0474c24068:
resource "aws_route_table" "rtb-041267f0474c24068" {
  propagating_vgws = []
  route            = []
  tags = {
    "Name"                                        = "eks-cluster/PrivateRouteTableEUWEST1A"

  }
  vpc_id = aws_vpc.cluster.id
}

# File generated by aws2tf see https://github.com/aws-samples/aws2tf
# aws_route_table.rtb-0939e7f3ae6e7b829:
resource "aws_route_table" "rtb-0939e7f3ae6e7b829" {
  propagating_vgws = []
  route            = []
  tags             = {}
  vpc_id           = aws_vpc.cluster.id
}

# File generated by aws2tf see https://github.com/aws-samples/aws2tf
# aws_route_table.rtb-0329e787bbafcb2c4:
resource "aws_route_table" "rtb-0329e787bbafcb2c4" {
  propagating_vgws = []
  route            = []
  tags = {
    "Name" = format("eks-%s-cluster/PrivateRouteTableEUWEST1C",var.cluster-name)
  }
  vpc_id = aws_vpc.cluster.id
}

# File generated by aws2tf see https://github.com/aws-samples/aws2tf
# aws_route_table.rtb-0102c621469c344cd:
resource "aws_route_table" "rtb-0102c621469c344cd" {
  propagating_vgws = []
  route            = []
  tags = {
    "Name"                                        = "eks-cluster/PrivateRouteTableEUWEST1B"

  }
  vpc_id = aws_vpc.cluster.id
}

# File generated by aws2tf see https://github.com/aws-samples/aws2tf
# aws_route_table.rtb-0c9df3106b9e1bca9:
resource "aws_route_table" "rtb-0c9df3106b9e1bca9" {
  propagating_vgws = []
  route = [
    {
      carrier_gateway_id         = ""
      cidr_block                 = "0.0.0.0/0"
      destination_prefix_list_id = ""
      egress_only_gateway_id     = ""
      gateway_id                 = aws_internet_gateway.igw-02c295b01d50c9d3e.id
      instance_id                = ""
      ipv6_cidr_block            = ""
      local_gateway_id           = ""
      nat_gateway_id             = ""
      network_interface_id       = ""
      transit_gateway_id         = ""
      vpc_peering_connection_id  = ""
      vpc_endpoint_id            = ""
    },
  ]
  tags   = {}
  vpc_id = aws_vpc.vpc-cicd.id
}

# File generated by aws2tf see https://github.com/aws-samples/aws2tf
# aws_route_table.rtb-0fe5311ff86579482:
resource "aws_route_table" "rtb-0fe5311ff86579482" {
  propagating_vgws = []
  route = [
    {
      carrier_gateway_id         = ""
      cidr_block                 = "0.0.0.0/0"
      destination_prefix_list_id = ""
      egress_only_gateway_id     = ""
      gateway_id                 = ""
      instance_id                = ""
      ipv6_cidr_block            = ""
      local_gateway_id           = ""
      nat_gateway_id             = aws_nat_gateway.nat-cicd.id
      network_interface_id       = ""
      transit_gateway_id         = ""
      vpc_peering_connection_id  = ""
      vpc_endpoint_id            = ""
    },
  ]
  tags = {
    "Name" = "rtb-eks-cicd-priv1"
  }
  vpc_id = aws_vpc.vpc-cicd.id
}
